name:                arcgrid
version:             0.1.0.0
synopsis:            Parse ESRI/ArcInfo (ArcGrid) raster GIS files
description:         A parser for ESRI/ArcInfo (ArcGrid) files. These are raster
                     GIS files widely used by many geographics-related software
                     to represent elevations or terrain features.
homepage:            https://github.com/nbrk/arcgrid
license:             BSD3
license-file:        LICENSE
author:              Nikolay Burkov
maintainer:          nbrk@linklevel.net
category:            Geo
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ArcGrid
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , bytestring
                     , parsec
                     , parsec-numeric
  default-language:    Haskell2010

executable arcgrid-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , arcgrid
  default-language:    Haskell2010

test-suite arcgrid-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , arcgrid
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nbrk/arcgrid
